# ocaml-flock

./: .gitignore  README.md  dune-project  flock.opam
.github/workflows/: ci.yml
bindings/: dune  ffi_bindings.ml
lib/: dune  flock.ml
lib_test/: dune  test_flock.ml
